<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Expense.AddExpense">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:padding="10dp">

        //field date
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/expense_label_date">

            <EditText
                android:id="@+id/txtDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="datetime" />

        </android.support.design.widget.TextInputLayout>

        //dropdown category
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/expense_label_category" />
        <Spinner
            android:id="@+id/drpCategory"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:dropDownWidth="wrap_content"
            android:spinnerMode="dropdown" />

        //field value
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/expense_label_value">

            <EditText
                android:id="@+id/txtValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        //field title
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/expense_label_description">

            <EditText
                android:id="@+id/txtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textLongMessage" />
        </android.support.design.widget.TextInputLayout>

        //dropdown account
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/expense_label_account" />
        <Spinner
            android:id="@+id/drpAccount"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:dropDownWidth="wrap_content"
            android:spinnerMode="dropdown" />

        //switchs recurrent, value fix, registred
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            //boolean recurrent
            <Switch
                android:id="@+id/switchRecurrent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense_label_recurrent" />

            //boolean fix value
            <Switch
                android:id="@+id/switchFixValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense_label_fix_value" />

            //boolean registred
            <Switch
                android:id="@+id/switchRegistred"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense_label_registred" />

        </LinearLayout>

        //buttons save and cancel
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <!--//button cancel-->
            <!--<Button-->
                <!--android:id="@+id/btnCancel"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentLeft="true"-->
                <!--android:onClick="onClickBtnCancel"-->
                <!--android:text="@string/expense_action_cancel" />-->

            //button save
            <Button
                android:id="@+id/btnCreate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:onClick="onClickBtnCreate"
                android:text="@string/expense_action_create" />

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
