<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".transfers.AddTransfer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:padding="10dp">

        ///field date
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/transfer_label_date">

            <EditText
                android:id="@+id/txtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="datetime" />
        </android.support.design.widget.TextInputLayout>

        //dropdown origen

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/transfer_label_origin" />

        <Spinner
            android:id="@+id/drpOrigin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:dropDownWidth="wrap_content"
            android:spinnerMode="dropdown" />

        //dropdown destino

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/transfer_label_target" />

        <Spinner
            android:id="@+id/drpDestiny"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:dropDownWidth="wrap_content"
            android:spinnerMode="dropdown" />


        //field valor
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/transfer_label_value">

            <EditText
                android:id="@+id/txtValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>


        //buttons save and cancel

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            //button cancel

            <!--<Button-->
                <!--android:id="@+id/btnCancel"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentLeft="true"-->
                <!--android:onClick="onClickBtnCancel"-->
                <!--android:text="@string/transfer_action_cancel" />-->

            //button save

            <Button
                android:id="@+id/btnCreate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:onClick="onClickBtnCreate"
                android:text="@string/transfer_action_create" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>